# epi-py

./: README.md  pyproject.toml  setup.py
src/reader/: __init__.py  __main__.py  twobytwo.py
src/reader.egg-info/: PKG-INFO  SOURCES.txt
